--- a/style/css/style.css
+++ b/style/css/style.css
@@ -421,7 +421,7 @@ justify-content: center;
 .bg-map{
 	width: 1440px;
 	height: 500px;
-	background-image: url("../pages/map.png");
+	background-image: url("http://screenshot.ru/upload/images/2017/06/05/mape18e0.png");
 	background-repeat: no-repeat;
     background-position: bottom;
 	display: flex;
